# ins_val

./: CB_ARW.csv  CB_ARW.py  CB_ARW2.csv  DR.py  accel.csv  accel2.csv  calibracion_estatica.ipynb  calibracion_estatica_dinamica.ipynb  csv_formatter.py  cuat.csv  cuat2.csv  graficar_vel_obd.ipynb  ins_gps_plot (3).ipynb  main.ipynb  main2.ipynb  main3.ipynb  main4.ipynb  merge_files.ipynb  offset_df.ipynb  offset_fast.csv  ploteo_obd.ipynb  proto_sensor_connect.ipynb  proto_sensor_connect_trap.ipynb  proto_sis_gm.ipynb  proto_sis_gm_claud.ipynb  proto_sis_gm_claud_vel_obd.ipynb  prueba.py  prueba2.py  prueba3.py  prueba_jupyter_widget.ipynb  prueba_reset_cuat.ipynb  quaternions_relative_calibrated.csv  vis_cuat.py  vis_cuat2.py
04_05_2026/: QuaternionEst__1.csv  Quaternion__1.csv  SensorConnectData__1.csv  cuat.csv  cuat_est.csv
04_05_2026/dafultsetting/: QuaternionEst__1.csv  Quaternion__1.csv  SensorConnectData__1.csv
04_05_2026/loadsetting/: QuaternionEst__1.csv  Quaternion__1.csv  SensorConnectData__1.csv
04_05_2026/xneg/x_neg_cs_p2/: QuaternionEst__1.csv  Quaternion__1.csv  SensorConnectData__1.csv
04_05_2026/xneg/x_neg_deafault_p1/: QuaternionEst__1.csv  (+2 more)
05_05_2026_p1/: QuaternionEst__0.csv  Quaternion__0.csv  SensorConnectData__0.csv
05_05_2026_p1/05_p1_2/: QuaternionEst__1.csv  QuaternionEst__2.csv  Quaternion__1.csv  Quaternion__2.csv  SensorConnectData__1.csv  SensorConnectData__2.csv
05_05_2026_p1/ahrs_custom/ahrs_custom/: 7_series_ahrs_custom_example.c  CMakeLists.txt  main.cpp  recording_tramaGPS.c
06_05_2026/100/: QuaternionEst__1.csv  QuaternionEst__2.csv  QuaternionEst__3.csv  Quaternion__1.csv  Quaternion__2.csv  Quaternion__3.csv  SensorConnectData__1.csv  SensorConnectData__2.csv  SensorConnectData__3.csv
06_05_2026/360/: QuaternionEst__1.csv  QuaternionEst__2.csv  Quaternion__1.csv  Quaternion__2.csv  SensorConnectData__1.csv  SensorConnectData__2.csv
06_05_2026/SC/: cuatEst_1.csv  cuatEst_2.csv  cuatEst_3.csv  cuatEst_4.csv  cuatEst_5.csv  cuatEst_6.csv  cuat_1.csv  cuat_2.csv  cuat_3.csv  cuat_4.csv  cuat_6.csv  cuat_7.csv  imu_1.csv  imu_2.csv  imu_3.csv  imu_4.csv  imu_5.csv  imu_7.csv
08_05_2026/08_05_2026/: registro_tiempo.txt
14_05_26/: obd_speed.csv  obd_speed_1_2.csv  obd_speed_2.csv  odb_data_all_times.csv  odb_data_cut.csv  parsear_csv.ipynb
18-05_prueba_oficina/bad_parker/: quaternion_5.csv  quaternionfilter_5.csv  sensordata_5.csv
21_05_2026/: bin_to_csv_colab_final_3v3.ipynb  prueba_06-a.csv  prueba_06-b.csv  prueba_06-c.csv  prueba_06-d.csv  prueba_07.csv  prueba_08_out.csv  prueba_08_sinc.csv
21_05_2026/01/: GPSlog__1.csv  GPSlog__2.csv  GPSlog__3.csv  GPSlog__4.csv  GPSlog__5.csv  gps_maps.ipynb  gps_test.ipynb  gps_track_map.html  obd_xy_track_map.html  obd_xy_track_map2.html
21_05_2026/02/: GPSlog__1.csv  GPSlog__2.csv  GPSlog__3.csv  GPSlog__4.csv
29_04_26/: GPSlog__1.csv  Quaternion__1.csv
30_04_2026/: QuaternionEst__1.csv  Quaternion__1.csv  SensorConnectData__1.csv
calibracion_orientacion/: acel_1.csv  acel_2.csv  acel_3.csv  acel_4_din.csv  acel_4_est.csv  cuat_1.csv  cuat_2.csv  cuat_3.csv  cuat_4_din.csv  cuat_4_est.csv
cuaternion_relativo_inicializacion/: cuat_1.csv  cuat_2.csv
ins_28_04_26/: 7_series_ahrs_custom_example_c  GPSlog__1.csv  GPSlog__10.csv  GPSlog__11.csv  GPSlog__12.csv  GPSlog__13.csv  GPSlog__2.csv  GPSlog__3.csv  GPSlog__4.csv  GPSlog__5.csv  GPSlog__6.csv  GPSlog__7.csv  GPSlog__8.csv  GPSlog__9.csv  Makefile  QuaternionEst__1.csv  QuaternionEst__10.csv  QuaternionEst__11.csv  QuaternionEst__11_A.csv  QuaternionEst__11_B.csv  QuaternionEst__12.csv  QuaternionEst__12_A.csv  QuaternionEst__12_B.csv  QuaternionEst__13.csv  QuaternionEst__13_A.csv  QuaternionEst__13_B.csv  QuaternionEst__14.csv  QuaternionEst__1_A.csv  QuaternionEst__1_B.csv  QuaternionEst__2.csv  QuaternionEst__2_A.csv  QuaternionEst__2_B.csv  QuaternionEst__3.csv  QuaternionEst__3_A.csv  QuaternionEst__3_B.csv  QuaternionEst__4.csv  QuaternionEst__4_A.csv  QuaternionEst__4_B.csv  QuaternionEst__5.csv  QuaternionEst__6.csv  (+40 more)
pruebas_oficina_29-04/: QuaternionEst__1.csv  SensorConnectData__1.csv  cuate_1.csv  cuate_2.csv  cuate_3.csv  cuate_4.csv  cuate_5.csv  cuate_6.csv  cuate_est_1.csv  cuate_est_1_A.csv  cuate_est_2.csv  cuate_est_3.csv  cuate_est_4.csv  cuate_est_5.csv  cuate_est_6.csv  euler_1.csv  euler_2.csv  euler_3.csv  euler_4.csv  euler_5.csv  euler_6.csv  euler_est_1.csv  euler_est_2.csv  euler_est_3.csv  euler_est_4.csv  euler_est_5.csv  euler_est_6.csv  imu_1.csv  imu_2.csv  imu_3.csv  imu_4.csv  imu_5.csv  imu_6.csv  vis_cuat2.py
(+210 files in other folders)
